--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/img/peercoin-leaf-green.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Tracks the current status of the Peercoin 0.12 fork.">
+    <meta name="keywords" content="Peercoin, Fork, 0.12">
+    <meta name="author" content="Willy">
     <title>Peercoin 0.12 Fork Watcher</title>
   </head>
   <body>
